--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -23,7 +23,11 @@ input[type="number"]::-webkit-inner-spin-button,
   }
 
 .reg-label{
-  @apply inline-block text-gray-900 text-lg;
+  @apply inline-block text-gray-200 text-lg;
+}
+
+.error-text {
+  @apply text-rose-400 text-xs mt-1;
 }
 
 label{
@@ -43,7 +47,7 @@ input{
 }
 
 .btn-primary {
-  @apply border border-gray-300 p-2 rounded-lg text-white hover:bg-gray-300 hover:text-gray-800 smooth;
+  @apply border border-gray-300 py-2 px-4 rounded-lg text-white hover:bg-amber-500 hover:text-gray-200 hover:border-amber-500 smooth text-xl;
 }
 /* ----
     Animations
