--- a/public/css/app.css
+++ b/public/css/app.css
@@ -561,6 +561,10 @@ video {
   margin-top: 1rem;
   margin-bottom: 1rem;
 }
+.mx-4 {
+  margin-left: 1rem;
+  margin-right: 1rem;
+}
 .mr-5 {
   margin-right: 1.25rem;
 }
@@ -594,11 +598,11 @@ video {
 .mt-2 {
   margin-top: 0.5rem;
 }
-.mt-1 {
-  margin-top: 0.25rem;
-}
 .mt-6 {
   margin-top: 1.5rem;
+}
+.mt-1 {
+  margin-top: 0.25rem;
 }
 .ml-2 {
   margin-left: 0.5rem;
@@ -654,12 +658,12 @@ video {
 .h-4 {
   height: 1rem;
 }
-.h-3 {
-  height: 0.75rem;
-}
 .h-max {
   height: -moz-max-content;
   height: max-content;
+}
+.h-3 {
+  height: 0.75rem;
 }
 .h-10 {
   height: 2.5rem;
@@ -742,11 +746,11 @@ video {
 .grid-cols-4 {
   grid-template-columns: repeat(4, minmax(0, 1fr));
 }
-.grid-cols-2 {
-  grid-template-columns: repeat(2, minmax(0, 1fr));
-}
 .grid-cols-1 {
   grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+.grid-cols-2 {
+  grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 .flex-col {
   flex-direction: column;
@@ -832,9 +836,6 @@ video {
 }
 .border-2 {
   border-width: 2px;
-}
-.border-l-2 {
-  border-left-width: 2px;
 }
 .border-t-2 {
   border-top-width: 2px;
@@ -955,10 +956,6 @@ video {
 .p-2 {
   padding: 0.5rem;
 }
-.px-6 {
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
-}
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
@@ -971,9 +968,9 @@ video {
   padding-top: 1rem;
   padding-bottom: 1rem;
 }
-.px-10 {
-  padding-left: 2.5rem;
-  padding-right: 2.5rem;
+.px-6 {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
 }
 .py-3 {
   padding-top: 0.75rem;
@@ -982,6 +979,10 @@ video {
 .px-5 {
   padding-left: 1.25rem;
   padding-right: 1.25rem;
+}
+.px-10 {
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
 }
 .px-8 {
   padding-left: 2rem;
@@ -994,10 +995,6 @@ video {
 .px-2 {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
-}
-.px-1 {
-  padding-left: 0.25rem;
-  padding-right: 0.25rem;
 }
 .pt-10 {
   padding-top: 2.5rem;
@@ -1022,9 +1019,6 @@ video {
 }
 .\!text-center {
   text-align: center !important;
-}
-.text-right {
-  text-align: right;
 }
 .text-xl {
   font-size: 1.25rem;
@@ -1722,6 +1716,10 @@ input {
     display: inline-block !important;
   }
 
+  .lg\:flex {
+    display: flex;
+  }
+
   .lg\:hidden {
     display: none;
   }
@@ -1734,14 +1732,6 @@ input {
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
-  .lg\:gap-16 {
-    gap: 4rem;
-  }
-
-  .lg\:border {
-    border-width: 1px;
-  }
-
   .lg\:border-l-2 {
     border-left-width: 2px;
   }
@@ -1750,14 +1740,22 @@ input {
     border-top-width: 0px;
   }
 
+  .lg\:px-6 {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+  }
+
   .lg\:px-10 {
     padding-left: 2.5rem;
     padding-right: 2.5rem;
   }
 
-  .lg\:px-6 {
-    padding-left: 1.5rem;
-    padding-right: 1.5rem;
+  .lg\:pr-10 {
+    padding-right: 2.5rem;
+  }
+
+  .lg\:pt-0 {
+    padding-top: 0px;
   }
 
   .lg\:pl-1\.5 {
@@ -1766,22 +1764,6 @@ input {
 
   .lg\:pl-1 {
     padding-left: 0.25rem;
-  }
-
-  .lg\:pt-0 {
-    padding-top: 0px;
-  }
-
-  .lg\:pl-2 {
-    padding-left: 0.5rem;
-  }
-
-  .lg\:pr-10 {
-    padding-right: 2.5rem;
-  }
-
-  .lg\:pl-10 {
-    padding-left: 2.5rem;
   }
 
   .lg\:text-4xl {
