--- a/public/css/app.css
+++ b/public/css/app.css
@@ -619,6 +619,9 @@ video {
 .-ml-px {
   margin-left: -1px;
 }
+.mb-1 {
+  margin-bottom: 0.25rem;
+}
 .block {
   display: block;
 }
@@ -671,6 +674,18 @@ video {
 .h-5 {
   height: 1.25rem;
 }
+.h-16 {
+  height: 4rem;
+}
+.h-8 {
+  height: 2rem;
+}
+.h-12 {
+  height: 3rem;
+}
+.h-auto {
+  height: auto;
+}
 .w-max {
   width: -moz-max-content;
   width: max-content;
@@ -705,6 +720,9 @@ video {
 .w-10 {
   width: 2.5rem;
 }
+.w-3\/12 {
+  width: 25%;
+}
 .w-4\/12 {
   width: 33.333333%;
 }
@@ -714,11 +732,38 @@ video {
 .w-5 {
   width: 1.25rem;
 }
+.w-1 {
+  width: 0.25rem;
+}
+.w-16 {
+  width: 4rem;
+}
+.w-8 {
+  width: 2rem;
+}
+.w-12 {
+  width: 3rem;
+}
+.w-1\/12 {
+  width: 8.333333%;
+}
+.w-8\/12 {
+  width: 66.666667%;
+}
+.w-2\/12 {
+  width: 16.666667%;
+}
+.w-2 {
+  width: 0.5rem;
+}
+.w-10\/12 {
+  width: 83.333333%;
+}
 .w-6\/12 {
   width: 50%;
 }
-.w-3\/12 {
-  width: 25%;
+.w-7\/12 {
+  width: 58.333333%;
 }
 .max-w-xl {
   max-width: 36rem;
@@ -731,6 +776,12 @@ video {
 }
 .flex-shrink-0 {
   flex-shrink: 0;
+}
+.table-auto {
+  table-layout: auto;
+}
+.table-fixed {
+  table-layout: fixed;
 }
 .translate-y-1\/2 {
   --tw-translate-y: 50%;
@@ -772,11 +823,23 @@ video {
 .place-items-center {
   place-items: center;
 }
+.\!items-start {
+  align-items: flex-start !important;
+}
+.items-start {
+  align-items: flex-start;
+}
 .items-end {
   align-items: flex-end;
 }
 .items-center {
   align-items: center;
+}
+.justify-start {
+  justify-content: flex-start;
+}
+.\!justify-start {
+  justify-content: flex-start !important;
 }
 .justify-end {
   justify-content: flex-end;
@@ -804,6 +867,9 @@ video {
 }
 .gap-6 {
   gap: 1.5rem;
+}
+.gap-0 {
+  gap: 0px;
 }
 .space-x-6 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
@@ -863,6 +929,12 @@ video {
 .border-b {
   border-bottom-width: 1px;
 }
+.border-b-2 {
+  border-bottom-width: 2px;
+}
+.border-r {
+  border-right-width: 1px;
+}
 .border-dotted {
   border-style: dotted;
 }
@@ -899,6 +971,10 @@ video {
 .border-gray-800 {
   --tw-border-opacity: 1;
   border-color: rgb(31 41 55 / var(--tw-border-opacity));
+}
+.border-gray-600 {
+  --tw-border-opacity: 1;
+  border-color: rgb(75 85 99 / var(--tw-border-opacity));
 }
 .border-b-gray-200\/10 {
   border-bottom-color: rgb(229 231 235 / 0.1);
@@ -949,6 +1025,10 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+.bg-gray-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(156 163 175 / var(--tw-bg-opacity));
 }
 .bg-opacity-50 {
   --tw-bg-opacity: 0.5;
@@ -1026,11 +1106,14 @@ video {
 .pt-10 {
   padding-top: 2.5rem;
 }
-.pb-10 {
-  padding-bottom: 2.5rem;
+.pb-20 {
+  padding-bottom: 5rem;
 }
 .pb-8 {
   padding-bottom: 2rem;
+}
+.pb-10 {
+  padding-bottom: 2.5rem;
 }
 .pb-2 {
   padding-bottom: 0.5rem;
@@ -1038,11 +1121,26 @@ video {
 .pt-2 {
   padding-top: 0.5rem;
 }
-.pb-20 {
-  padding-bottom: 5rem;
-}
 .pb-4 {
   padding-bottom: 1rem;
+}
+.pl-2 {
+  padding-left: 0.5rem;
+}
+.pr-2 {
+  padding-right: 0.5rem;
+}
+.pl-1 {
+  padding-left: 0.25rem;
+}
+.pr-1 {
+  padding-right: 0.25rem;
+}
+.text-left {
+  text-align: left;
+}
+.\!text-left {
+  text-align: left !important;
 }
 .text-center {
   text-align: center;
@@ -1078,6 +1176,21 @@ video {
   font-size: 1.875rem;
   line-height: 2.25rem;
 }
+.text-\[1rem\] {
+  font-size: 1rem;
+}
+.text-\[0\.2rem\] {
+  font-size: 0.2rem;
+}
+.text-\[0\.5rem\] {
+  font-size: 0.5rem;
+}
+.text-\[0\.7rem\] {
+  font-size: 0.7rem;
+}
+.text-\[0\.9rem\] {
+  font-size: 0.9rem;
+}
 .font-bold {
   font-weight: 700;
 }
@@ -1110,6 +1223,9 @@ video {
 }
 .leading-tight {
   line-height: 1.25;
+}
+.leading-none {
+  line-height: 1;
 }
 .text-rose-800 {
   --tw-text-opacity: 1;
@@ -1194,6 +1310,15 @@ video {
   --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
   --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+.shadow {
+  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+.shadow-gray-600 {
+  --tw-shadow-color: #4b5563;
+  --tw-shadow: var(--tw-shadow-colored);
 }
 .ring-gray-300 {
   --tw-ring-opacity: 1;
